--- a/content/service-worker.mdx
+++ b/content/service-worker.mdx
@@ -1,7 +1,9 @@
 ---
 title: 'Notes on Javascript Service Workers'
 publishedAt: '2020-02-20'
-summary: 'Personal Reflections: Insights Captured During My Exploration of Service Workers.'
+summary:
+  'Personal Reflections: Insights Captured During My Exploration of Service
+  Workers.'
 ---
 
 Personal Reflections: Insights Captured During My Exploration of Service Workers
